--- a/template/indext.html
+++ b/template/indext.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en" dir="ltr">
   <head>
-    <title>HELLO WORLD</title>
+    <meta charset="utf-8">
+    <title>My First Web Page</title>
   </head>
   <body>
     <h1>This is a basic "Hello World" template for an HTML file.</h1>
