--- a/Assignments/CodeSkeleton/Assets/style.css
+++ b/Assignments/CodeSkeleton/Assets/style.css
@@ -1,16 +1,26 @@
 body{
-  /*background-color: purple; */
-  background-image: url('Assets/background.jpg')
+  background-color: Lavender;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  color: #fff;
+  display: inline block;
 }
 
 h1{
   text-align: center;
 }
 
+h2{
+  text-align: center;
+}
+h3{
+  text-align: center;
+  font-size: 10px;
+}
 p{
   text-align: center;
+}
+
+ul{
+  display: inline block;
 }
